# University

./: README.md
.github/workflows/: build.yml  sonarcloud.yml
2course/lab1/: InputSystem.cpp  InputSystem.hpp  Matrix.cpp  Matrix.hpp  README.md  lab1.cpp  lab1.sln  lab1.vcxproj  lab1.vcxproj.filters
2course/lab2/: README.md  String.cpp  String.hpp  Utilities.cpp  Utilities.hpp  lab2.cpp  lab2.sln  lab2.vcxproj  lab2.vcxproj.filters
2course/lab3/: CargoTransport.hpp  InputSystem.cpp  InputSystem.hpp  lab3.cpp  lab3.sln  lab3.vcxproj  lab3.vcxproj.filters
coursework3sem/: CLASSES_OVERVIEW.md  CMakeLists.txt
coursework3sem/data/: companies.txt
coursework3sem/include/: DatabaseException.h  RouteException.h  ValidationException.h  addstopdialog.h  booking.h  bus.h  childdiscount.h  company.h  configmanager.h  discount.h  driver.h  editroutedialog.h  filedatabase.h  iserializable.h  logger.h  mainmenu.h  mainwindow.h  passenger.h  payment.h  pricecalculator.h  reportgenerator.h  route.h  routedetailsdialog.h  routedialog.h  routefinder.h  routemanager.h  schedule.h  seat.h  seniordiscount.h  stop.h  studentdiscount.h  ticket.h  ticketoffice.h  ticketvalidator.h  trip.h
coursework3sem/src/: addstopdialog.cpp  booking.cpp  bus.cpp  childdiscount.cpp  company.cpp  configmanager.cpp  discount.cpp  driver.cpp  editroutedialog.cpp  filedatabase.cpp  logger.cpp  main.cpp  mainmenu.cpp  mainwindow.cpp  passenger.cpp  payment.cpp  pricecalculator.cpp  reportgenerator.cpp  route.cpp  routedetailsdialog.cpp  routedialog.cpp  routefinder.cpp  schedule.cpp  seat.cpp  seniordiscount.cpp  studentdiscount.cpp  ticket.cpp  ticketoffice.cpp  ticketvalidator.cpp  trip.cpp
lab1/: CMakeLists.txt  Matrix.cpp  Matrix.hpp  README.md  lab1.cpp  menu.cpp  menu.hpp  sonar-project.properties
lab1/include/: InputSystem.hpp  Matrix.hpp  menu.hpp
lab1/src/: Matrix.cpp  menu.cpp
lab2/: CMakeLists.txt  README.md  Utilities.cpp  sonar-project.properties
lab2/include/: String.hpp  menu.hpp
lab2/src/: String.cpp  Utilities.cpp  lab2.cpp  menu.cpp
lab3/: CMakeLists.txt  CargoTransport.cpp  CargoTransport.hpp  OtherTransport.cpp  README.md  lab3.cpp
lab3/include/: Auto.hpp  CargoTransport.hpp  InputSystem.hpp  LinkedList.hpp  OtherTransport.hpp  Plane.hpp  String.hpp  Train.hpp  Utilities.hpp  consts.hpp
lab3/src/: Auto.cpp  CargoTransport.cpp  InputSystem.cpp  LinkedList.cpp  OtherTransport.cpp  Plane.cpp  String.cpp  Utilities.cpp  lab3.cpp
lab4/: Bicycle.cpp  Bicycle.hpp  CMakeLists.txt  Car.cpp  Car.hpp  Carriage.cpp  Carriage.hpp  InputSystem.hpp  README.md  Transport.cpp  Transport.hpp  Utilities.cpp  Utilities.hpp  consts.hpp  lab4.cpp
lab4/include/: Bicycle.hpp  Car.hpp  Carriage.hpp  String.hpp  Transport.hpp  Utilities.hpp  consts.hpp
lab4/src/: Bicycle.cpp  Car.cpp  Carriage.cpp  InputSystem.cpp  String.cpp  Transport.cpp  Utilities.cpp  lab4.cpp
lab5/: CMakeLists.txt  README.md
lab5/include/: Stack.hpp  Utilities.hpp  menu.hpp  menuText.hpp
lab5/src/: lab5.cpp  menuText.cpp
lab6/: CMakeLists.txt  README.md
lab6/include/: CargoTransport.hpp  DistanceException.hpp  Utilities.hpp  consts.hpp
lab6/src/: CargoTransport.cpp  InputSystem.cpp  LinkedList.cpp  Train.cpp  Utilities.cpp  lab6.cpp
lab7/: CMakeLists.txt  README.md  REDCODE.txt  busesFlights.txt
lab7/include/: BusFlight.hpp  InputSystem.hpp  Time.hpp  consts.hpp  utilities.hpp
lab7/src/: BusFlight.cpp  InputSystem.cpp  Time.cpp  lab7.cpp  utilities.cpp
lab8/: CMakeLists.txt
lab8/include/: Algorithms.hpp  Iterator.hpp  Ring.hpp  RingMenu.hpp  Utilities.hpp
lab8/src/: Algorithms.cpp  lab8.cpp
